kubernetes.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: meta-dados-rio

---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meta-dados-rio
  namespace: meta-dados-rio
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: meta-dados-rio
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: meta-dados-rio
    spec:
      containers:
        - name: meta-dados-rio
          image: gcr.io/PROJECT_ID/IMAGE_API:TAG
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - bash
                - "-c"
                - kill -0 $(cat /run/nginx.pid)
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always

---
# Service
apiVersion: v1
kind: Service
metadata:
  labels:
    app: meta-dados-rio
  name: meta-dados-rio
  namespace: meta-dados-rio
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    app: meta-dados-rio

---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meta-dados-rio-ingress
  namespace: meta-dados-rio
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - meta.dados.rio
      secretName: meta-dados-rio-tls
  rules:
    - host: meta.dados.rio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meta-dados-rio
                port:
                  number: 80
